--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <table>
         <tr>
             <td><img src="logo.jpeg" alt=""></td>
-            <td><img src="2.`" alt=""></td>
+            <td><img src="2.jpeg" alt=""></td>
             <td><img src="3.jpeg" alt=""></td>
             <td><img src="4.jpeg" alt=""></td>
+            <td><img src="g.png" alt=""></td>
         </tr>
     </table>
 </body>
